Added links to Amazon Check it up! buttons.

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ extra_css: "carousel.css"
           <h2 class="featurette-heading">Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
           <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install in the back seat of your car, a car seat itself and a carrier which the car seat clicks in to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
           <p class="lead on-one-line"><span class="font-weight-bold">Chicco Bravo Trio Travel System:</span> $379.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm">Check it up!</button>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Chicco-Bravo-Travel-System-Lilla/dp/B00MS9VTH4', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-md-5">
           <img class="baby-item"src="img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
@@ -254,7 +254,7 @@ extra_css: "carousel.css"
           <h2 class="featurette-heading">Alternative: <span class="text-muted">bassinet included</span></h2>
           <p class="lead">One downside of Chicco Bravo Travel System is that it doesn’t come with a bassinet, which means that if you want to take your baby on a walk, she’ll have to stay in a somewhat upright position strapped to the seat for the whole time. Bassinet, on the opposite side, provides the comfort of the crib and your baby will lay down in it perfectly flat. I personally didn’t enjoy long walks for the first half a year of my baby’s life, so for my needs – such as shopping trips – Chicco Bravo worked just fine. My friend, however, spent hours pushing the stroller at the nearest waterfront park. Well, she was lucky to live near one, and then again that’s how her baby prefferd to sleep. Her family chose to invest into a more functional, more solid and definitely fancier option. The model offers a car seat, a bassinet and a carrier which will work with both of them.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">UPPAbaby Vista Stroller & MESA Car Seat Bundle:</span> $1,199.98, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm">Check it up!</button>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/dp/B079B3TJFM', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-md-5 order-md-1">
           <img src="img/UppaBabyVistaBundle.jpg" class="img-fluid" alt="Responsive image">
@@ -269,8 +269,8 @@ extra_css: "carousel.css"
           <h2 class="featurette-heading">Crib</h2>
           <p class="lead">Crib is not only a place where your baby sleeps. It is also a safe place where you can leave the baby unattended knowing that she won’t roll over and fall (the danger becomes real at ~4 months of age). Therefore, definitely, get a crib! I am linking the one we ended up buying – and we are very happy with it! – but, honestly, I think the decision should come up to your furniture preferences. Cribs come in two sizes – standard and mini. You need a standard one which will fit a mattress of 28 x 52. Most cribs will feature adjustable mattress heights. Putting a baby down into a crib without waking her up is quite a task, so assemble the crib with your mattress on the highest setting – you’ll be grateful for that!</p>
           <p class="lead"> Now, what you also need to know is that when your baby will start sleeping in the crib is a big question, and will depend on your thoughts around co-sleeping. Co-sleeping is considered unsafe and oh so not recommended by American Academy of Pediatrics, but many Moms end up going co-sleeping route anyways. Sleep training an infant is hard. Having to get up for a feeding 3-4 times/night is hard.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Delta Canton 4-in-1 Convertible Crib:</span> $219.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm">Check it up!</button>
+          <p class="lead on-one-line"><span class="font-weight-bold">Delta Canton 4-in-1 Convertible Crib:</span> $240.27, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Canton-Convertible-Bianca/dp/B06XPBNRH7', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-md-5">
           <img class="baby-item"src="img/Canton4in1ConvertibleCrib.jpg" alt="Canton 4 in 1 Convertible Crib">
@@ -285,7 +285,7 @@ extra_css: "carousel.css"
           <h2 class="featurette-heading">Optional: <span class="text-muted">co-sleeper bassinet</span></h2>
           <p class="lead">Now many parents are not excited about the crib in the beginning, because it seems too big, too cold and too far away from their bed. There are all kinds of bassinets on the market, including so called bedside bassinets – those which are meant to be positioned right next to your bed for easy checking on the baby. The downside of any bassinet is that the baby will inevitably outgrow it in a next few months and will have to go back into the crib, so for me it felt like an unnecessary expense. I didn’t have a bassinet. My friend – on the contrary – did and she loved it! Their bassinet was designed for bed sharing – they placed it right on their bed between Mom and Dad. She said the baby was much happier sleeping next to them and with the C-section it was a huge relief to be able to take care of him without having to get up.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">SwaddleMe By Your Side Sleeper:</span> $45.38, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm">Check it up!</button>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-md-5 order-md-1">
           <img src="img/SwaddleMeBassinet.jpg" class="img-fluid" alt="SwaddleMe By Your Side Sleeper">
@@ -305,6 +305,7 @@ extra_css: "carousel.css"
       <p class="float-right"><a href="#">Back to top</a></p>
       <p>&copy; Nataliya Pogodina with ♡ &middot;  2019-{{ site.time | date: "%Y" }}  &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
+
   </main>
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
