--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Car seat</div></li>
-              <li><div><input type="checkbox"> Car seat carrier/stroller</div></li>
+              <li><div><input type="checkbox"><span> </span></span><a href="#travel-system">Car seat</a></div></li>
+              <li><div><input type="checkbox"><a href="#travel-system"> Car seat carrier/stroller</a></div></li>
               <li><div><input type="checkbox"> Diaper backpack</div></li>
               <li><div><input type="checkbox"> Blanket</div></li>
               <li><div><input type="checkbox"> <i>Optional: car shades, mirror</i></div></li>
@@ -166,7 +166,7 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"> Crib</div></li>
+              <li><div><input type="checkbox"><a href="#crib"> Crib</a></div></li>
               <li><div><input type="checkbox"> Crib mattress</div></li>
               <li><div><input type="checkbox"> Waterproof crib pads x2</div></li>
               <li><div><input type="checkbox"> Crib sheets</div></li>
@@ -174,7 +174,7 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Sleep sack</div></li>
               <li><div><input type="checkbox"> Pacifier x2</div></li>
               <li><div><input type="checkbox"> Bouncer or swing</div></li>
-              <li><div><input type="checkbox"> <i> Optional: bassinet</i></div></li>
+              <li><div><input type="checkbox"><a href="#bassinet"> <i> Optional: bassinet</i></a></div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
@@ -236,7 +236,7 @@ extra_css: "carousel.css"
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="travel-system"></span>Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
           <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install in the back seat of your car, a car seat itself and a carrier which the car seat clicks in to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
           <p class="lead on-one-line"><span class="font-weight-bold">Chicco Bravo Trio Travel System:</span> $379.99, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Chicco-Bravo-Travel-System-Lilla/dp/B00MS9VTH4', '_blank'); return false;">Check it up!</button>
@@ -266,7 +266,7 @@ extra_css: "carousel.css"
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Crib</h2>
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="crib"></span>Crib</h2>
           <p class="lead">Crib is not only a place where your baby sleeps. It is also a safe place where you can leave the baby unattended knowing that she won’t roll over and fall (the danger becomes real at ~4 months of age). Therefore, definitely, get a crib! I am linking the one we ended up buying – and we are very happy with it! – but, honestly, I think the decision should come up to your furniture preferences. Cribs come in two sizes – standard and mini. You need a standard one which will fit a mattress of 28 x 52. Most cribs will feature adjustable mattress heights. Putting a baby down into a crib without waking her up is quite a task, so assemble the crib with your mattress on the highest setting – you’ll be grateful for that!</p>
           <p class="lead"> Now, what you also need to know is that when your baby will start sleeping in the crib is a big question, and will depend on your thoughts around co-sleeping. Co-sleeping is considered unsafe and oh so not recommended by American Academy of Pediatrics, but many Moms end up going co-sleeping route anyways. Sleep training an infant is hard. Having to get up for a feeding 3-4 times/night is hard.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">Delta Canton 4-in-1 Convertible Crib:</span> $240.27, Amazon.com</p>
@@ -282,7 +282,7 @@ extra_css: "carousel.css"
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Optional: <span class="text-muted">co-sleeper bassinet</span></h2>
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="bassinet"></span>Optional: <span class="text-muted">co-sleeper bassinet</span></h2>
           <p class="lead">Now many parents are not excited about the crib in the beginning, because it seems too big, too cold and too far away from their bed. There are all kinds of bassinets on the market, including so called bedside bassinets – those which are meant to be positioned right next to your bed for easy checking on the baby. The downside of any bassinet is that the baby will inevitably outgrow it in a next few months and will have to go back into the crib, so for me it felt like an unnecessary expense. I didn’t have a bassinet. My friend – on the contrary – did and she loved it! Their bassinet was designed for bed sharing – they placed it right on their bed between Mom and Dad. She said the baby was much happier sleeping next to them and with the C-section it was a huge relief to be able to take care of him without having to get up.</p>
           <p class="lead on-one-line"><span class="font-weight-bold">SwaddleMe By Your Side Sleeper:</span> $45.38, Amazon.com</p>
           <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
