Added an empty span tag to card lists.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"><span> </span></span><a href="#travel-system">Car seat</a></div></li>
-              <li><div><input type="checkbox"><a href="#travel-system"> Car seat carrier/stroller</a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat</a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#travel-system">Car seat carrier/stroller</a></div></li>
               <li><div><input type="checkbox"> Diaper backpack</div></li>
               <li><div><input type="checkbox"> Blanket</div></li>
               <li><div><input type="checkbox"> <i>Optional: car shades, mirror</i></div></li>
@@ -166,7 +166,7 @@ extra_css: "carousel.css"
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-2 mb-2">
-              <li><div><input type="checkbox"><a href="#crib"> Crib</a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#crib">Crib</a></div></li>
               <li><div><input type="checkbox"> Crib mattress</div></li>
               <li><div><input type="checkbox"> Waterproof crib pads x2</div></li>
               <li><div><input type="checkbox"> Crib sheets</div></li>
@@ -174,7 +174,7 @@ extra_css: "carousel.css"
               <li><div><input type="checkbox"> Sleep sack</div></li>
               <li><div><input type="checkbox"> Pacifier x2</div></li>
               <li><div><input type="checkbox"> Bouncer or swing</div></li>
-              <li><div><input type="checkbox"><a href="#bassinet"> <i> Optional: bassinet</i></a></div></li>
+              <li><div><input type="checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
             </ul>
             <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
           </div>
